--- a/_includes/J-status.html
+++ b/_includes/J-status.html
@@ -1,23 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>‌[J][M] trains are severely disrupted between <b>Myrtle Av</b> and <b>Delancey St-Essex St</b>.</p>Service Changes:
-
-[J] trains are not running between Myrtle Av and Delancey St-Essex St.
-
-[J] trains are running in two sections:
-
-Between Jamaica Center-Parsons/Archer and Myrtle Av.
-Between Broad St and Delancey St-Essex St.
-
-[M] trains are not running between W 4 St-Wash Sq and Myrtle Av.
-
-[M] trains are running in two sections:
-Between Forest Hills-71 Av and 2 Av.
-Between Middle Village-Metropolitan Av and Myrtle Av.
-
-We're addressing a switch problem at Delancey St-Essex St.
-
-Travel Alternatives:
-
-Use [A][C][L] trains or nearby bus local service.</div><div class="line-alert"><p>Manhattan-bound [J][Z] skips <b>75 St-Elderts Ln</b></p>Use nearby Cypress Hills or 85 St-Forest Pkwy stations.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Manhattan-bound [J][Z] skips <b>75 St-Elderts Ln</b></p>Use nearby Cypress Hills or 85 St-Forest Pkwy stations.
 
 Additional travel alternatives:
 For service to this station, take the [J] or [Z] to Cypress Hills and transfer to a Jamaica Center-bound train.
