--- a/_includes/L-status.html
+++ b/_includes/L-status.html
@@ -1,6 +1,17 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Manhattan, 8 Av-bound [L] skips <b>1 Av</b></p>For service to this station, take the [L] to 14 St-Union Sq accessibility icon and transfer to a Brooklyn-bound train.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Manhattan, 8 Av-bound [L] skips <b>1 Av</b></p>For service to this station, take the [L] to 14 St-Union Sq accessibility icon and transfer to a Brooklyn-bound train.
 
 For service from this station, take the M14 bus, or take the [L] to Bedford Av accessibility icon and transfer to a Manhattan-bound train.
 
 What's happening?
-We're making station improvements</div></div>
+We're making station improvements</div><div class="line-alert"><p>No [L] between <b>Broadway Junction</b> and <b>Canarsie-Rockaway Pkwy</b></p>[L] runs between 8 Av and Broadway Junction approximately every 8 minutes days/evenings and 12 minutes overnight.
+
+shuttle bus icon Free shuttle buses run along two routes:
+1. L91 shuttle bus icon local buses make all [L] station stops between Broadway Junction and Rockaway Pkwy
+2. L91 Limited shuttle bus icon runs nonstop between Broadway Junction and Rockaway Pkwy
+Transfer between trains and shuttle bus icon buses at Broadway Junction.
+When exiting at Broadway Junction or Junius St [3] station (Livonia Av), get a GO ticket for re-entry into the subway.
+
+What's happening?
+We're replacing tracks
+
+accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
