--- a/_includes/R-status.html
+++ b/_includes/R-status.html
@@ -1,10 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Southbound [R] trains are running on the [F] line from <b>Lexington Av/63 St</b> to <b>42 St-Bryant Pk</b>, then on the [D] line to <b>DeKalb Av</b>.</p>We are addressing a signal problem near Lexington Av/63 St.
-
-If your stop is skipped, take a northbound [R] train.
-
-For [R] service from Manhattan to Brooklyn, take an [N][Q] train to DeKalb Av.
-
-Planned Work Reminder:
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Southbound [F][R] trains are running with delays after we addressed a signal problem near <b>Lexington Av/63 St</b>. </p>Planned Work Reminder:
 This weekend, [R] trains run via the [F] in both directions between 57 St-7 Av [Q] and 21 St-Queensbridge [F] while we make station improvements.</div><div class="line-alert"><p>[R] skips <b>5 Av/59 St</b>, <b>Lexington Av/59 St</b> and <b>Queens Plaza</b> in both directions</p>[R] runs via the [F] in both directions between 57 St-7 Av [Q] and 21 St-Queensbridge [F], making stops at Lexington Av/63 St and Roosevelt Island.
 
 Travel Alternatives:
