--- a/_includes/5-status.html
+++ b/_includes/5-status.html
@@ -1,11 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>No [5] between <b>E 180 St</b>, Bronx and <b>Bowling Green</b>, Manhattan</p>[5] service runs between Eastchester-Dyre Av and E 180 St.
-
-For service between E 180 St and 149 St-Grand Concourse, take the [2].
-For service between 149 St-Grand Concourse and Bowling Green, take the [4].
-Transfer between trains at E 180 St accessibility icon | [2][5] and/or 149 St-Grand Concourse [2][4].
-Note: Bronx-bound [5] service from Bowling Green begins at approximately 11 AM.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[5] runs every 20 minutes</p>[5] service operates on a modified schedule because [4][5] and [6] trains are sharing tracks in Manhattan.
 
 What's happening?
-Monthly track maintenance
-
-accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
+We're making electrical improvements</div></div>
