--- a/_includes/J-status.html
+++ b/_includes/J-status.html
@@ -1,4 +1,23 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Manhattan-bound [J][Z] skips <b>75 St-Elderts Ln</b></p>Use nearby Cypress Hills or 85 St-Forest Pkwy stations.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>3 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[J][M][Z] train service is disrupted in both directions between <strong>Brooklyn</strong> and <strong>Manhattan</strong>.</p><p>Use [A][C][L][F] instead.</p>What's Happening?
+We are investigating why a train's brakes activated near Marcy Av.
+EMS is assisting someone in need of medical assistance at Myrtle Av.
+
+Service Changes:
+There is no [J][Z] train service between Myrtle Av and Broad St in both directions.
+There is no [M] train service between Myrtle Av and Broadway-Lafayette St in both directions.
+
+The last stop on Broad St-bound [J][Z] trains will be Broadway Junction or Myrtle Av.
+The last stop on Metropolitan Av-bound [M] trains will be 2 Av (via [F] line).
+The last stop on 71 Av-bound [M] trains will be Myrtle Av.
+Listen for train crew announcements to hear how your train will run.
+
+Travel Alternatives:
+For service between Brooklyn and Manhattan, consider using [A][C][L] trains.
+Transfer between [J] and [A][C][L] at Broadway Junction.
+Transfer between [M] and [L] at Myrtle-Wyckoff Avs.
+
+For service along the [J] line in Lower Manhattan, use [4][5][6][R][W] trains making nearby stops.
+For service along the [M] line in Manhattan, use [E][F] instead.</div><div class="line-alert"><p>Manhattan-bound [J][Z] skips <b>75 St-Elderts Ln</b></p>Use nearby Cypress Hills or 85 St-Forest Pkwy stations.
 
 Additional travel alternatives:
 For service to this station, take the [J] or [Z] to Cypress Hills and transfer to a Jamaica Center-bound train.
