--- a/_includes/F-status.html
+++ b/_includes/F-status.html
@@ -1,4 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Lower Manhattan and Brooklyn, no Coney Island-bound [F] at <b>Broadway-Lafayette St</b>, <b>2 Av</b>, <b>Delancey St-Essex St</b>, <b>East Broadway</b> and <b>York St</b></p>Coney Island-bound [F] runs via the [A] local from W 4 St-Wash Sq to Jay St-MetroTech.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Lower Manhattan and Brooklyn, no Coney Island-bound [F] at <b>Broadway-Lafayette St</b>, <b>2 Av</b>, <b>Delancey St-Essex St</b>, <b>East Broadway</b> and <b>York St</b></p>Coney Island-bound [F] runs via the [A] local from W 4 St-Wash Sq to Jay St-MetroTech.
 
 Travel alternatives:
 For Broadway-Lafayette St, take the [D] via transfer at W 4 St-Wash Sq.
@@ -15,4 +15,13 @@ Travel tip:
 For 2 Av and East Broadway, use nearby Broadway-Lafayette St or Grand St [D] stations via transfer at W 4 St-Wash Sq.
 
 What's happening?
-Track maintenance</div></div>
+Track maintenance</div><div class="line-alert"><p>In Queens, Jamaica-bound [F] skips <b>Briarwood</b>, <b>Sutphin Blvd</b> and <b>169 St</b></p>For service to these stations, take the [F] to Parsons Blvd or Jamaica-179 St and transfer to a Manhattan-bound [F].
+
+For service from Briarwood, take the [E] or [F] to Kew Gardens-Union Tpke and transfer to a Jamaica-bound [F].
+
+For service from Sutphin Blvd, take the [F] to Kew Gardens-Union Tpke and transfer to a Jamaica-bound [F].
+
+For service from 169 St, take the Q1, Q2, Q3, Q17 or Q36 buses instead.
+
+What's happening?
+We're modernizing signals on the Queens Blvd Line</div></div>
