--- a/_includes/A-status.html
+++ b/_includes/A-status.html
@@ -1,23 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>[D][F] trains are rerouted between <strong>Manhattan</strong> and <strong>Brooklyn</strong> while we address a signal problem near <b>34 St-Herald Sq</b>. Expect [A][D][E][F] train delays.</p>Service Changes:
-Southbound:
-Southbound [D] trains are running on the [C] line from 59 St-Columbus Circle to Jay St-MetroTech, then on the [F] line to Coney Island-Stillwell Av.
-Southbound [F] trains are running on the [E] line from Jackson Hts-Roosevelt Av to W 4 St-Wash Sq, then on the [C] line to Jay St-MetroTech.
-Some southbound [F] trains will end at 21 St-Queensbridge or Queens Plaza.
-Northbound:
-Northbound [D] trains are running on the [C] line from W 4 St-Wash Sq to 59 St-Columbus Circle.
-Northbound [F] trains are running on the [E] line from W 4 St-Wash Sq to Jackson Hts-Roosevelt Av.
-Expect delays in [A][E] train service in both directions while rerouted trains share tracks.
-
-At W 4 St-Wash Sq, board all [D][F] trains on the upper level.
-
-Travel Alternatives:
-In The Bronx, take [4] trains.
-Between Queens and Manhattan, take [E][R] trains.
-Between Manhattan and Brooklyn, take [J][N][Q][R] trains.
-
-Note: At this time:
-[B] train service has concluded for the evening.
-[M] train service runs between Delancey St-Essex St and Middle Village-Metropolitan Av.</div><div class="line-alert"><p>In Lower Manhattan and Brooklyn, no Queens-bound [A] at <b>Spring St</b>, <b>Canal St</b>, <b>Chambers St</b>, <b>Fulton St</b> and <b>High St</b></p>Queens-bound [A] runs via the [F] from W 4 St-Wash Sq to Jay St-MetroTech.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Lower Manhattan and Brooklyn, no Queens-bound [A] at <b>Spring St</b>, <b>Canal St</b>, <b>Chambers St</b>, <b>Fulton St</b> and <b>High St</b></p>Queens-bound [A] runs via the [F] from W 4 St-Wash Sq to Jay St-MetroTech.
 
 Travel Alternatives:
 For Spring St, Canal St and Chambers St/World Trade Center, take the [E] or an uptown [A] via transfer at W 4 St-Wash Sq.
