--- a/_includes/7-status.html
+++ b/_includes/7-status.html
@@ -1,10 +1,4 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>There are no [7] trains between <b>Flushing-Main St</b> and <b>74 St-Broadway</b> while emergency teams respond to someone who was struck by a train at <b>111 St</b>.</p>The last stop on Flushing-bound [7] trains is either Queensboro Plaza or 74 St-Broadway. Listen to train crew announcements to hear where your train will end its trip.
-
-For service between Flushing-Main St and 74 St-Broadway, consider nearby Q48 or Q66 bus service.
-
-For service between Queens and Manhattan, consider [E][F][M][N][R][W] trains.
-
-Long Island Rail Road is accommodating subway riders at no additional cost at Flushing Main St, Woodside, Penn Station, and Grand Central in both directions.</div><div class="line-alert"><p>In Queens, Flushing-bound [7] skips <b>82 St-Jackson Hts</b> and <b>111 St</b></p>Use nearby 74 St-Broadway, 90 St-Elmhurst Av, 103 St-Corona Plaza or Mets-Willets Point stations.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Queens, Flushing-bound [7] skips <b>82 St-Jackson Hts</b> and <b>111 St</b></p>Use nearby 74 St-Broadway, 90 St-Elmhurst Av, 103 St-Corona Plaza or Mets-Willets Point stations.
 
 Additional travel alternatives:
 For service to 82 St-Jackson Hts, take the [7] to 90 St-Elmhurst Av and transfer to a Manhattan-bound train.
