--- a/_includes/M-status.html
+++ b/_includes/M-status.html
@@ -1,1 +1,15 @@
-<h2 class="lead text-success"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-check-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/></svg>Good Service</h2>
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>There is no [J] between <b>Marcy Av</b> and <b>Broadway Junction</b>.</p><p>There is no [M] between <b>Broadway-Lafayette St</b> and <b>Middle Village-Metropolitan Av</b>.</p>Service Changes:
+There is no [J] train service between Marcy Av and Broadway Junction.
+The last stop on Broad St-bound [J] trains will be Broadway Junction.
+The last stop on Jamaica-bound [J] trains from Manhattan will be Marcy Av.
+
+There is no [M] train service between Metropolitan Av and Broadway-Lafayette St.
+The last stop on Metropolitan Av-bound [M] trains will be 2 Av (via [F] line).
+
+What's Happening?
+We are addressing a loss of third rail power between Myrtle Av and Metropolitan Av.
+
+Travel Alternatives:
+For service between Manhattan and Brooklyn use [A][C][L] trains.
+For service along the [J] line, consider using B46, Q24, or Q56 buses.
+For service along the [M] line between Myrtle Av and Middle Village-Metropolitan Av, use B13, B54, or Q54 buses.</div></div>
