--- a/_includes/G-status.html
+++ b/_includes/G-status.html
@@ -1,11 +1,21 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>No [G] between <b>Nassau Av</b> and <b>Court Sq</b></p>[G] runs between Church Av and Nassau Av, the last stop.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>No [G] between <b>Bedford-Nostrand Avs</b>, Brooklyn and <b>Court Sq</b>, Queens</p>[G] runs between Church Av and Bedford-Nostrand Avs, the last stop.
 
-shuttle bus icon Free B94 shuttle buses make stops between Nassau Av and Court Sq.
-Transfer between [G] and shuttle bus icon buses at Nassau Av
-Use OMNY or MetroCard for a free out-of-system transfer between [G] at Broadway and [J][M][Z] at Hewes St or Lorimer St.
+shuttle bus icon Free B98 shuttle buses make stops between Bedford-Nostrand Avs and Court Sq.
+Transfer between [G] and shuttle bus icon buses at Bedford-Nostrand Avs
+Use OMNY or MetroCard for a free out-of-system transfer when re-entering the subway at Court Sq-23 St, Lorimer St [L], Bedford-Nostrand Avs, Broadway, Hewes St and Lorimer St [J][M][Z].
+
+Additional travel tips:
+For Court Sq, consider [E][M] service.
+
+For Metropolitan Av, consider the [L] at Lorimer St accessibility icon.
+For Broadway, consider [J][M][Z] service at nearby Hewes St or Lorimer St.
+In Downtown Brooklyn, consider [A][C] and [F] service.
+[A][C][F] and [M] connect with the [L] at stations along 14 St
+[F] connects with [J][M][Z] at Delancey St-Essex St
+[A][C] connects with the [J][Z] at Fulton St accessibility icon
 
 What's happening?
 We're modernizing signals
-Get details about [G] Line service changes this summer.
+Get details about [G] Line service changes that are occurring this summer.
 
 accessibility icon This service change affects one or more ADA accessible stations and these travel alternatives may not be fully accessible. Please contact 511 to plan your trip.</div></div>
