--- a/_includes/A-status.html
+++ b/_includes/A-status.html
@@ -1,16 +1,3 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>In Upper Manhattan, [A] runs local in both directions between <b>168 St</b> and <b>59 St-Columbus Circle</b></p>Schedule reminder: Late night [A] also runs local between these stations.
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>2 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Northbound [A] trains are running with delays after we addressed a signal problem at <b>Broadway Junction</b>. </p>Northbound [A] trains have resumed making express stops in Brooklyn.</div><div class="line-alert"><p>In Upper Manhattan, [A] runs local in both directions between <b>168 St</b> and <b>59 St-Columbus Circle</b></p>Schedule reminder: Late night [A] also runs local between these stations.
 What's happening?
-We're replacing tracks</div><div class="line-alert"><p>In Manhattan, uptown local [A] skips <b>Spring St</b>, <b>23 St</b> and <b>50 St</b></p>For service to Spring St, take the [A] to W 4 St-Wash Sq and transfer to a downtown [A].
-
-For service from Spring St, take the [A] to Canal St and transfer to an uptown [A].
-
-For service to 23 St, take the [A] to 34 St-Penn Station and transfer to a downtown [A] or [E].
-
-For service to 50 St, take the [A] to 59 St-Columbus Circle and transfer to a downtown [A].
-
-For service from 23 St and 50 St, take the [A] or [E] to 42 St-Port Authority or 14 St and transfer to an uptown [A].
-
-Schedule reminder: [A] does not serve these local stations days and evenings.
-
-What's happening?
-Structural maintenance</div></div>
+We're replacing tracks</div></div>
