--- a/_includes/A-status.html
+++ b/_includes/A-status.html
@@ -1,12 +1,1 @@
-<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Southbound [A] trains are running local from <strong>59 St</strong> to <strong>W 4 St.</strong></p><p>Southbound [A][C] trains are rerouted via the [F] line from <b>W 4 St-Wash Sq</b> to <strong>Jay St.</strong></p>What's Happening?
-We are addressing a mechanical problem on a train at Chambers St.
-
-Travel Alternatives:
-For service to/from Spring St, Canal St or Chambers St, use the [E] train.
-For service to/from Fulton St, use northbound [A][C] service or use [2][3][4][5][J] trains.
-For service to/from High St, use northbound [A][C] service or use the nearby York St ( [F] ) station.
-
-Boarding Change:
-At 34 St-Penn Station, board southbound [A] trains on the local ( [C][E] train) platform.
-
-Expect delays in southbound [F] and Metropolitan Av-bound [M] trains as they share tracks with these rerouted trains.</div></div>
+<h2 class="lead text-warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16"><path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg>1 alerts on line</h2><div class="line-alerts"><div class="line-alert"><p>Southbound [A][C] trains are running with delays after we addressed a mechanical problem on a train at <b>Chambers St</b>. </p>Southbound [A][C] trains have resumed making regularly scheduled stops.</div></div>
